--- a/21_11_08.ipynb
+++ b/21_11_08.ipynb
@@ -6,7 +6,7 @@
       "name": "21_11_08.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQsu3nU/jH2I+fRHTIYkKG",
+      "authorship_tag": "ABX9TyO3iXczkKNkvmblteDD5Iuf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "ENTKO8DCBQH7"
       },
       "source": [
-        ""
+        "colab"
       ],
       "execution_count": null,
       "outputs": []
